--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 <body>
     <h1>Odin Recipes</h1>
         <a href="recipes/lasagna.html">Lasagna</a>
+        <br>
+        <a href="recipes/hamburger.html">Hamburger</a>
+        <br>
+        <a href="recipes/ceasar_salad.html">Chicken Caesar Salad</a>
     
 </body>
 </html>
